[project]
name = "hexsweeper"
version = "1.0.2"
description = "Hexagonal Minesweeper"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = []

[project.gui-scripts]
hexsweeper = "hexsweeper:run"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pylint>=3.3.5",
]
